# sudoku_perm

./: LICENSE  README.md  pyproject.toml  sudoku_perm
tests/: conftest.py  run.sh  test_assignments.py  test_basic.py  test_dupes.py  test_errors.py  test_explain.py  test_multi_sum.py  test_output_formats.py  test_per_length_filters.py  test_slots_pins.py
