[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku_perm"
version = "1.4.1"
description = "A fast, intuitive CLI tool for Sudoku, Killer Sudoku, and Kakuro permutation solving."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Jason O'Brien" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black>=24.8",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.scripts]
sudoku_perm = "sudoku_perm:main"

[tool.setuptools]
py-modules = ["sudoku_perm"]
include-package-data = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --tb=short --disable-warnings"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
strict = false
exclude = ["build/", "dist/", ".venv/"]